# Compileo

./: .dockerignore  .env.example  404.html  Dockerfile  Dockerfile.api  Dockerfile.gui  Dockerfile.gui.light  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements-docker.txt  requirements-gui.txt  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  sync_to_hf.yml
developers/plugin_development_guide/: index.html
docs/: index.md
docs/developers/: plugin_development_guide.md
docs/userGuide/: api_authentication.md  benchmarkingapi.md  benchmarkinggui.md  chunkapi.md  chunkcli.md  chunkgui.md  datasetgenapi.md  datasetgencli.md  datasetgengui.md  datasetqualapi.md  datasetqualgui.md  datasetsapi.md  datasetversioningapi.md  datasetversioningcli.md  dockerInstall.md  documentsapi.md  documentscli.md  documentsgui.md  extractionapi.md  extractioncli.md  extractiongui.md  gui_user_guide.md  index.md  ingestionapi.md  ingestiongui.md  jobhandlingapi.md  jobhandlingcli.md  jobhandlinggui.md  jobsapi.md  logging.md  performanceapi.md  plugins.md  pluginsapi.md  pluginscli.md  projectsapi.md  promptsapi.md  settingsgui.md  taxonomyapi.md  taxonomycli.md  taxonomygui.md
plugins/compileo-anki-plugin/: README.md
plugins/compileo-anki-plugin/src/: anki_formatter.py
plugins/compileo-anki-plugin/storage/plugins/compileo-anki-plugin/: README.md  plugin.yaml
plugins/compileo-scrapy-playwright-scraper/: README.md  plugin.yaml  requirements.txt
plugins/compileo-scrapy-playwright-scraper/src/: __init__.py  scrapy_scraper.py
search/: search_index.json
src/compileo/: __init__.py  cli.py  cli_commands.py  cli_handlers.py
src/compileo/api/: __init__.py  main.py
src/compileo/api/core/: config.py
src/compileo/api/middleware/: auth.py  logging.py  rate_limiting.py
src/compileo/api/models/: __init__.py  extraction.py
src/compileo/api/routes/: __init__.py  benchmarking.py  chunks.py  dataset_versioning.py  datasets.py  documents.py  extraction.py  jobs.py  performance.py  plugins.py  projects.py  prompts.py  quality.py  settings.py  taxonomy.py
src/compileo/api/services/: api_client.py
src/compileo/core/: config.py  logging.py  settings.py
src/compileo/features/benchmarking/: __init__.py  config.py  correlation.py  evaluator.py  hooks.py  tracker.py
src/compileo/features/benchmarking/metrics/: __init__.py  base.py  classification.py  generation.py
src/compileo/features/benchmarking/suites/: __init__.py  (+2 more)
src/compileo/features/chunk/: __init__.py  chunker.py  cross_file_chunker.py  engine.py  schema.py  service.py  sliding_window.py
src/compileo/features/datasetgen/: evaluation_dataset_generator.py  generator.py  llm_interaction.py  main.py  output_formatter.py  prompt_builder.py  version_manager.py
src/compileo/features/datasetqual/: __init__.py  analyzer.py  config.py  hooks.py  reporting.py
src/compileo/features/extraction/: __init__.py  aigen_classifier.py  category_resolver.py  chunk_loader.py  chunk_sampler.py  context_models.py  enhanced_cache.py  enhanced_cleanup.py  enhanced_result_search.py  error_logging.py  exceptions.py  filesystem_storage.py  gemini_classifier.py  grok_classifier.py  hierarchical_classifier.py  metadata_extractor.py  models.py  multi_stage_classifier.py  ollama_classifier.py  openai_classifier.py  performance_monitor.py  pipeline_config.py  result_cleanup.py  result_metadata.py  result_search.py  result_storage_service.py  retry_utils.py  storage.py  storage_monitor.py  taxonomy_extractor.py
src/compileo/features/gui/: README.md  __init__.py  config.py  main.py  taxonomy_display.py  taxonomy_editor.py  taxonomy_tree.py
src/compileo/features/ingestion/: __init__.py  main.py
src/compileo/features/jobhandle/: README.md  __init__.py  enhanced_job_queue.py  job_cache.py  job_executors.py  job_management.py  job_resources.py  job_scheduler.py  models.py  progress_context.py  queue_processor.py  resource_manager.py  result_cache.py  worker.py  worker_functions.py  worker_manager.py  worker_wrapper.py
src/compileo/features/plugin/: manager.py
src/compileo/features/taxonomy/: __init__.py  analytics.py  api_client.py  category_resolver.py  chunk_loader.py  content_processor.py  gemini_generator.py  generator.py  grok_generator.py  iterative_generator.py  loader.py  merger.py  models.py  ollama_generator.py  openai_generator.py  processor.py  prompt_builder.py  qa_generator.py  response_parser.py  smart_sampler.py
src/compileo/gui/: __init__.py
src/compileo/storage/: __init__.py
src/compileo/storage/src/: __init__.py  database.py
userGuide/api_authentication/: index.html
userGuide/benchmarkingapi/: index.html
userGuide/benchmarkinggui/: index.html
userGuide/chunkapi/: index.html
userGuide/chunkcli/: index.html
userGuide/chunkgui/: index.html
userGuide/datasetgenapi/: index.html
userGuide/datasetgencli/: index.html
userGuide/datasetgengui/: index.html
userGuide/datasetqualapi/: index.html
userGuide/datasetqualgui/: index.html
userGuide/datasetsapi/: index.html
userGuide/datasetversioningapi/: index.html
userGuide/datasetversioningcli/: index.html
userGuide/dockerInstall/: index.html
userGuide/documentsapi/: index.html
userGuide/documentscli/: index.html
userGuide/documentsgui/: index.html
userGuide/extractionapi/: index.html
userGuide/extractioncli/: index.html
userGuide/extractiongui/: index.html
userGuide/gui_user_guide/: index.html
userGuide/ingestionapi/: index.html
userGuide/ingestiongui/: index.html
userGuide/jobhandlingapi/: index.html
userGuide/jobhandlingcli/: index.html
userGuide/jobhandlinggui/: index.html
userGuide/jobsapi/: index.html
userGuide/logging/: index.html
userGuide/performanceapi/: index.html
userGuide/plugins/: index.html
userGuide/pluginsapi/: index.html
userGuide/pluginscli/: index.html
userGuide/projectsapi/: index.html
userGuide/promptsapi/: index.html
userGuide/settingsgui/: index.html
userGuide/taxonomyapi/: index.html
userGuide/taxonomycli/: index.html
userGuide/taxonomygui/: index.html
(+73 files in other folders)
