[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compileo"
version = "0.1.0"
description = "A modular pipeline for dataset creation and curation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate==1.10.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "autopep8==2.3.2",
    "backoff==2.2.1",
    "banks==2.2.0",
    "beautifulsoup4==4.13.5",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cobble==0.1.4",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.3",
    "cryptography==46.0.1",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "defusedxml==0.7.1",
    "Deprecated==1.2.18",
    "device-smi==0.4.1",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "et_xmlfile==2.0.0",
    "filelock==3.19.1",
    "filetype==1.2.0",
    "flash_attn==2.8.3",
    "flatbuffers==25.2.10",
    "fonttools==4.60.0",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.182.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-cloud-vision==3.10.2",
    "google-genai",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "griffe==1.14.0",
    "grpcio==1.75.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "hf_transfer==0.1.9",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.27.0",
    "huggingface-hub==0.35.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "isodate==0.7.2",
    "Jinja2==3.1.6",
    "jiter==0.11.0",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "langdetect==1.0.9",
    "logbar==0.0.4",
    "lxml==6.0.1",
    "magika==0.6.2",
    "mammoth==1.10.0",
    "Markdown==3.9",
    "markdownify==1.2.0",
    "markitdown==0.1.3",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.6",
    "maturin==1.9.4",
    "ml_dtypes==0.5.3",
    "mpmath==1.3.0",
    "msal==1.33.0",
    "msal-extensions==1.3.1",
    "msoffcrypto-tool==5.4.2",
    "multidict==6.6.4",
    "mypy_extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "olefile==0.47",
    "ollama==0.5.4",
    "omegaconf==2.3.0",
    "onnx==1.19.0",
    "onnxruntime==1.22.1",
    "openai==1.108.0",
    "opencv-python==4.12.0.88",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "pdfminer.six==20250506",
    "pi_heif==1.1.0",
    "pikepdf==9.11.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psutil==7.1.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycocotools==2.0.10",
    "pycodestyle==2.14.0",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "PyMuPDF==1.26.4",
    "pypandoc==1.15",
    "pyparsing==3.2.4",
    "pypdf==6.0.0",
    "pypdfium2==4.30.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "random_word==1.0.13",
    "RapidFuzz==3.14.1",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scipy==1.16.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "SpeechRecognition==3.14.3",
    "SQLAlchemy==2.0.43",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "timm==1.0.20",
    "tokenicer==0.0.5",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.56.2",
    "triton==3.4.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "unstructured==0.18.15",
    "unstructured-client==0.42.3",
    "unstructured-inference==1.0.5",
    "unstructured.pytesseract==0.3.15",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "webencodings==0.5.1",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.9",
    "yarl==1.20.1",
    "youtube-transcript-api==1.0.3",
    "qdrant-client==1.9.2",
    "redis==5.0.7",
    "pyarrow==16.1.0",
]

[project.scripts]
compileo = "compileo.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"